kubernetes/applications/studentlens/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: studentlens
  namespace: studentlens
spec:
  type: ClusterIP
  selector:
    app: studentlens
  ports:
    - name: http
      port: 80
      targetPort: http
